# ft_otp

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: encrypt.rs  gui.rs  main.rs  totp.rs  utils.rs
ui/: app-window.slint
