[package]
name = "ft_otp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base32 = "0.4.0"
clap = { version = "4.5.0", features = ["cargo"] }
hex = "0.4.3"
image = "0.24.8"
magic-crypt = "3.1.13"
qrcode = "0.13.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
sha1 = "0.10.6"
